2004-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* README.en, README.ja (CVS based development): Mention anonymous
	CVS access; remove the description about developers' pserver access.

2003-11-15  Simon Josefsson  <jas@extundo.com>

	* pgg-gpg.el (pgg-scheme-lookup-key): Use regexp match instead of
	split-string (split-string is different between emacs 21.2 and
	21.4).  Reported by ultrasoul@ultrasoul.com (David D. Smith).

2004-09-15  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-view.el (mime-preview-follow-current-entity): Avoid error
	on null entity.
	(mime-preview-find-boundary-info): Ditto.
	Avoid error at the beginning of buffer.

2004-08-28  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* pgg-pgp5.el (pgg-scheme-verify-region): `let*' -> `let'.
	* pgg-pgp.el (pgg-scheme-verify-region): Ditto.
	* mime-edit.el (mime-edit-split-and-send): Ditto.
	* mime-play.el (mime-store-message/partial-piece): Ditto.

2004-08-03  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-edit.el (mime-edit-mime-version-field-for-message/partial):
	Fix usage of mime-encode-field-body.

2004-07-24  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-view.el (mime-display-multipart/related): Do nothing when
	the part is not found.

2004-04-18  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* mime-edit.el (mime-file-types): Add application/pdf. Use base64
	for application/postscript.
	(mime-content-types): Add application/pdf.

2004-04-04  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-edit.el (mime-file-types): Add application/vnd.ms-excel.
	(mime-content-types): Add application/vnd.ms-excel and
	application/msword.

2004-02-12  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mime-image.el (mime-display-image): Ignore errors about image
	decoding.

2004-02-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-image.el (mime-image-normalize-xbm-buffer): Add missing
	format specifiers.

	* mime-view.el (mime-view-insert-entity-button): Fix misplaced let
	form.

2004-01-15  Katsumi Yamaoka  <yamaoka@jpl.org>
